fix(checkbox): minimize the layout shifts in `readonly` mode
When the checkbox becomes readonly, it renders
`limel-dynamic-label` which has a slightly different UI.
Also since the Host becomes empty and then gets an
element which has some height, it would flicker during
this process.

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -19,6 +19,13 @@
 :host(limel-checkbox) {
     @include custom-checkbox-styles;
 }
+:host(limel-checkbox),
+limel-dynamic-label {
+    min-height: 2.5rem;
+}
+limel-dynamic-label {
+    margin-left: 0.25rem;
+}
 
 @include checkbox.core-styles;
 @include form-field.core-styles;
